--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -31,6 +31,7 @@
           android:theme="@android:style/Theme.NoTitleBar"></activity>
         <activity android:name="HelpActivity"></activity>
         <activity android:name="SearchActivity"></activity>
+        <activity android:name="DashboardActivity"></activity>
 
     </application>
 </manifest>
