--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name="DashboardActivity"></activity>
         <activity android:name="CollectionActivity"></activity>
         <activity android:name="AboutActivity"></activity>
+        <activity android:name="CameraActivity"></activity>
 
     </application>
 </manifest>
