--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -8,7 +8,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
-
+	<uses-feature android:name="android.hardware.camera" />
+	 <uses-feature android:name="android.hardware.camera.autofocus" />
+	 <uses-feature android:name="android.hardware.camera.flash" android:required="false"/>
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".MuseumSplashActivity"
                   android:label="@string/app_name">
